# flamelens

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  build.rs  dist-workspace.toml
.github/: csvlens.data  demo.tape  make_demo.sh  top_view.tape
.github/workflows/: lint.yml  test.yml
src/: app.rs  event.rs  flame.rs  handler.rs  lib.rs  main.rs  py_spy.rs  py_spy_flamegraph.rs  state.rs  tui.rs  ui.rs  view.rs
tests/data/: ignore-metadata-lines.txt  invalid-lines.txt  py-spy-simple.txt  readable.txt  recursive.txt
tests/fixtures/ignore-metadata-lines/: expected_ordered_counts.json  expected_stacks.json
tests/fixtures/invalid-lines/: expected_ordered_counts.json  expected_stacks.json
tests/fixtures/py-spy-simple/: expected_ordered_counts.json  expected_stacks.json
tests/fixtures/recursive/: expected_ordered_counts.json  expected_stacks.json
tests/python/: long_running.py  run-python-long-running-with-flamelens.sh
