[package]
name = "flamelens"
version = "0.1.0"
authors = ["Yung Siang Liau <liauys@gmail.com>"]
license = "MIT"
description = "Flamegraph viewer in the terminal"
readme = "README.md"
homepage = "https://github.com/YS-L/flamelens"
repository = "https://github.com/YS-L/flamelens"
exclude = [".github/*", "tests/*", ".vscode/*"]
keywords = ["flamegraph", "profiling", "cli", "tui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
py-spy = { version = "0.3.14", optional = true }
ratatui = { version = "0.26.3", features = ["unstable-rendered-line-info"] }
regex = "1.10.5"
remoteprocess = { version = "0.4.13", optional = true }
tui-input = "0.8.0"

[features]
python = ["dep:py-spy", "dep:remoteprocess"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = "debuginfo"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
