[package]
name = "flamelens"
version = "0.3.1"
authors = ["Yung Siang Liau <liauys@gmail.com>"]
license = "MIT"
description = "Flamegraph viewer in the terminal"
readme = "README.md"
homepage = "https://github.com/YS-L/flamelens"
repository = "https://github.com/YS-L/flamelens"
exclude = [".github/*", "tests/*", ".vscode/*"]
keywords = ["flamegraph", "profiling", "cli", "tui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
py-spy = { version = "0.3.14", optional = true }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1.10.5"
remoteprocess = { version = "0.4.13", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tui-input = "0.11.1"

[features]
python = ["dep:py-spy", "dep:remoteprocess"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = "debuginfo"